# vit_cifar10

./: pyproject.toml
src/cifar10/: classification.py  trainer.py
src/cifar10/dataset/: cifar10.py
src/cifar10/model/: transformer.py  vit.py
